--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "description": "",
   "dependencies": {
     "express": "^4.21.1",
-    "mongoose": "^8.8.1"
+    "mongoose": "^8.8.1",
+    "nanoid": "^5.0.8",
+    "shortid": "^2.2.16"
   }
 }
